--- a/caiouser.html
+++ b/caiouser.html
@@ -14,7 +14,7 @@
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
 
-    <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
+    <div style=" color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
         <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png" align="left">
         <p style="text-align:left;">
             Olá! Sou Caio Rodrigo Forim (ataby himawari). Eu sou artista, compositor e programador. Eu gosto de jogos de história e ação. Eu sei como programar em Construct, GDevelop, Clickteam e Scratch.
