--- a/projetos.html
+++ b/projetos.html
@@ -18,7 +18,7 @@
 <h2>Projéto GOC</h2>
 <br />
 <h3>Participantes no projéto:</h3>
-<p style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<p style=" align-content: center; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
     Organizador: <a href="fabriciouser.html">Fabricio</a> <br />
     gráficos: Eder , <a href="fabriciouser.html">Fabricio</a>, Guigames, <a href="caiouser.html">Caio</a>, Ludis <br />
     Áudio: <a href="fabriciouser.html">Fabricio</a> e <a href="caiouser.html">Caio</a> <br />
@@ -27,12 +27,12 @@
     Roteirista: Milly <br />
 </p>
 <h3>Sinopse do jogo</h3>
-<div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
 <p>
    Indisponivel por agora
 </div>
 <h3>Recursos graficos</h3>
-<div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
     <img src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/854395140433117184/856239667783139379/Sprite-0001.gif" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862428863359614984/unknown.png" alt="Alternate Text" />
@@ -44,7 +44,7 @@
 
 </div>
 <h3>Audios</h3>
-<div style=" align-content: center; color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
 <audio controls="controls">
     <source src="musica_doidona.mp3" type="audio/mp3" />
 
