--- a/rob-nam.html
+++ b/rob-nam.html
@@ -1,12 +1,13 @@
 <html lang="pt-br">
 <head>
     <title>ROB-NAM </title>
+    <meta charset="utf-8" name="viewport" content="" />
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você está no jogo ROB-NAM</h1>
+        <h1>VocÃª esta no jogo ROB-NAM</h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
@@ -15,26 +16,23 @@
     <br /> <br /> <br />
 
     <div style="text-align:center">
-        <h3>ROB-NAM feito pelo Caio</h3>
-        <iframe src="https://turbowarp.org/551449485/embed" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <h3>ROB-NAM feito pelo Caio Rodrigo Forim</h3>
+        <iframe src="https://turbowarp.org/552055801/embed" width="499" height="416" allowtransparency="true" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
 
     <div id="instru">
         <p>
-            Instruções: <br />
-            Apenas responda as perguntas do ROB-NAM e ele vai adivinhar seu nome! <br />
-            <br />
-            ===ATENÇÃO=== <br />
-            Este projeto vai ser migrado para outro, cujo vai ter mais interação, história, personagens e mais!
-            <br />
-            Fique ligado para notícias!
+            SÃ³ responda as perguntas que o ROB-NAM fizer e ele irÃ¡ adivinhar seu nome!
+            (Tem alguns finais secretos, tente colocar o seu nome como algo diferente para ver se vocÃª consegue um final diferente!)
+            
+            ==ESTE JOGO VAI TER UM RE-BOOT, CHAMADO ROB-NAM ODYSSEY==
         </p>
     </div>
     <div id="creditos">
-        Arte: <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a><br />
-        Programação: Por <a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> também <br />
-        Gênio por trás dessa máquina hiper-inteligente:<a href="https://scratch.mit.edu/users/CaioRodrigoForim/">CaioRodrigoForim</a> de novo <br /> <br />
-        ink oficial do projéto: <a href="https://scratch.mit.edu/projects/551449485/">https://scratch.mit.edu/projects/551449485/</a>
+        VersÃ£o Atual: v1.1 <br>
+        Arte: <a href="caiouser.html">@ataby_himawari</a> <br>
+        ProgramaÃ§Ã£o: <a href="caiouser.html">@ataby_himawari</a>  <br>
+        <br>jogo original: <a href="https://scratch.mit.edu/projects/552055801">https://scratch.mit.edu/projects/552055801</a>
     </div>
 
 </body>
