--- a/ederuser.html
+++ b/ederuser.html
@@ -4,17 +4,18 @@
     <title>Eder</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você esta no perfil do Eder </h1>
+        <h1>VocÃª esta no perfil do Eder </h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
 
-    <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
+    <div style=" color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
         <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852245358544289795/863071150501003304/eucircular.png" alt="Fabricio" align="left">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
@@ -28,7 +29,7 @@
     <h3>Jogos:</h3>
     <BR />
     <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
-        <p style="text-align:center;">Nehum jogo cadastrado até o momento</p>
+        <p style="text-align:center;">Nehum jogo cadastrado atÃ© o momento</p>
     </div>
 </body>
 </html>
