--- a/membros.html
+++ b/membros.html
@@ -12,6 +12,7 @@
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
+        <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
     </div>
     <br />
     <div style="text-align:center;">
