--- a/plataformas.html
+++ b/plataformas.html
@@ -4,10 +4,11 @@
     <title>Plataformas</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
 </head>
 <body style="text-align:center;">
     <div id="menu">
-    <h1>Você está na pagina plataformas</h1>
+    <h1>VocÃª esta na pagina plataformas</h1>
     <a href="index.html" class="btn">Inicial</a>
     <a href="membros.html" class="btn">Membros</a>
     <a href="plataformas.html" class="btn">Plataformas</a>
@@ -19,13 +20,13 @@
 
 
     <h2 id="scrathvideoinfo">
-        Por enquanto a maioria dos nosos projétos foi desenvolvido no scrath 3.0
+        Por enquanto a maioria dos nosos projï¿½tos foi desenvolvido no scrath 3.0
     </h2>
     <div id="infoscrath">
         <p>
-            Com ele, é possível criar histórias, jogos e animações com scripts feitos com blocos. <br />
-            É um tipo de programação “visual”, mais simplificada. <br />
-            Isso permite que qualquer um, mesmo sem saber nada sobre programação, consiga criar projetos digitais com mais facilidade.
+            Com ele, ï¿½ possï¿½vel criar histï¿½rias, jogos e animaï¿½ï¿½es com scripts feitos com blocos. <br />
+            ï¿½ um tipo de programaï¿½ï¿½o ï¿½visualï¿½, mais simplificada. <br />
+            Isso permite que qualquer um, mesmo sem saber nada sobre programaï¿½ï¿½o, consiga criar projetos digitais com mais facilidade.
 
         </p>
     </div>
