--- a/wesleyuser.html
+++ b/wesleyuser.html
@@ -4,6 +4,7 @@
     <title>Wesley</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
 </head>
 <body style="text-align:center">
     <div id="menu">
@@ -14,7 +15,7 @@
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
 
-    <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
+    <div style=" color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
         <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862752328742469652/wesleycircular.png" align="left">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
