--- a/caiouser.html
+++ b/caiouser.html
@@ -4,6 +4,7 @@
     <title>Caio Rodrigo Forim</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
 </head>
 <body style="text-align:center">
     <div id="menu">
