--- a/fabriciouser.html
+++ b/fabriciouser.html
@@ -4,6 +4,7 @@
     <title>Fabricio</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
 </head>
 <body style="text-align:center">
     <div id="menu">
@@ -14,7 +15,7 @@
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
 
-    <div style=" color: black; font-weight: bold; background-color:; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
+    <div style=" color: black; font-weight: bold;  background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
         <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852245358544289795/863095764976140329/fabriciocircular.png" alt="Fabricio" align="left">
         <p style="text-align:left;">
             Oi eu me chamo Fabrício Keltika Tanquella, sou Artista, programador, compositor e organizador do Guardians of Crystal. Gosto de jogos com ação e bastante violencia; Sei programar em Unity, Unreal, Java e Pyton;
