--- a/caiouser.html
+++ b/caiouser.html
@@ -16,11 +16,29 @@
     </div>
 
     <div style=" color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
-        <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png" align="left">
+        <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png"align= "left">
         <p style="text-align:left;">
             Olá! Sou Caio Rodrigo Forim (ataby himawari). Eu sou artista, compositor e programador. Eu gosto de jogos de história e ação. Eu sei como programar em Construct, GDevelop, Clickteam e Scratch.
             <br /> <br /> <br /> <br />
 </div>
+
+<div style=" color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray;  text-align:left;">
+
+<img 
+    style="height: 50px;" 
+    src="https://img.icons8.com/plasticine/2x/discord-new-logo.png" align= "left"> <p">ataby_himawari#2807</p> 
+    <a href="https://scratch.mit.edu/users/ataby_himawari/">
+
+    <br>
+
+<img 
+style="height: 50px" 
+src="https://www.nicepng.com/png/full/339-3394548_scratch-logo-g-ery-awesome-algorithms-and-creative.png" align= left>
+ataby_himawari</a>
+
+        <br /> <br /> <br /> <br />
+</div> 
+
     <br /><br /><br />
     <h3>Jogos:</h3>
     <BR />
