--- a/fabriciouser.html
+++ b/fabriciouser.html
@@ -1,14 +1,14 @@
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" name="viewport" content="" />
-    <title>Fabricio</title>
+    <title>Fabrício Keltika Tanquella</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
     <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
 </head>
 <body style="text-align:center">
     <div id="menu">
-        <h1>Você esta no perfil do Fabricio </h1>
+        <h1>Você esta no perfil do Fabrício Keltika Tanquella </h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
