--- a/index.html
+++ b/index.html
@@ -8,14 +8,28 @@
     <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
 </head>
 <body>
+    
+    <div style="text-align:center;">
+        <img src="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" alt="">
+        <h1>Seja bem vindo na pagina oficial do Fall Gwecs Team</h1>
+    </div>
+
+    <div style=" color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 250px; border: double; background-color:darkgray; ">
+        <img style="height:20%;" src="Fall_Gwecs_simbolo_rapido_preto.png" align="left">
+        <p style="text-align:left;">
+         Gerente da Pagina: <a href="wesleyuser.html">Wesley Queiroz Alencar</a> <br>
+         Designers: <a href="caiouser.html">Caio Rodrigo Forim</a>, <a href="fabriciouser.html">Fabrício Keltika Tanquella</a> e <a href="ederuser.html">Eder</a>
+        </p>
+            <br /> <br /> <br /> <br />
+</div>
     <div id="menu">
-        <h1>Você está na pagina inicial</h1>
+        <h2>Você quer dar uma olhada nos seguintes artigos?</h1>
         <a href="index.html" class="btn">Inicial</a>
         <a href="membros.html" class="btn">Membros</a>
         <a href="plataformas.html" class="btn">Plataformas</a>
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
         <br /> <br />
-        <p id="test">Caso queira ajujdar na criação da web mande uma solicitação no discord ProcrackYT#4444</p>
+       
     </div>
 </body>
 </html>
