--- a/projetos.html
+++ b/projetos.html
@@ -4,7 +4,7 @@
     <title>Projetos e jogos</title>
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <link href="index.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico" />
+    <link rel="shortcut icon" href="Fall_Gwecs_simbolo_COMPLETO_PRETO.ico" />
 </head>
 <body style="text-align:center">
     <div id="menu">
@@ -15,41 +15,17 @@
         <a href="projetos.html" class="btn">Jogos e Projetos</a>
     </div>
     <br /> <br /> <br />
-    
-<h2>Projéto GOC</h2>
-<br />
-<h3>Participantes no projéto:</h3>
-<p style=" align-content: center; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
-    Organizador: <a href="fabriciouser.html">Fabricio</a> <br />
-    gráficos: Eder , <a href="fabriciouser.html">Fabricio</a>, Guigames, <a href="caiouser.html">Caio</a>, Ludis <br />
-    Áudio: <a href="fabriciouser.html">Fabricio</a> e <a href="caiouser.html">Caio</a> <br />
-    Cutcienes / história André e  Eder <br />
-    Apoio geral: André, Laura, Milly e <a href="wesleyuser.html">Wesley</a> <br />
-    Roteirista: Milly <br />
-</p>
-<h3>Sinopse do jogo</h3>
-<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
-<p>
-   Indisponivel por agora
-</div>
-<h3>Recursos graficos</h3>
-<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
-    <img src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/854395140433117184/856239667783139379/Sprite-0001.gif" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862428863359614984/unknown.png" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862437986649112616/pedra_certa.png" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862678460358459392/unknown.png" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680791440293938/grams2.gif" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680894615060531/pedra_certa.png" alt="Alternate Text" />
+    <h3>Projetos:</h3>
+    <BR />
+    <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
+        <a href="goc.html"><img style="height:100px" src="https://cdn.discordapp.com/attachments/854395140433117184/854399928138072064/Screenshot_2021-06-15-13-37-50-1.png" alt="GOC" /></a>
+    </div>
 
+    <h3>Jogos:</h3>
+    <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
+        <a href="goc.html"><img style="height:100px" src="https://cdn.discordapp.com/attachments/852245358544289795/863045385476243496/unknown.png" alt="GOC" /></a>
 
-</div>
-<h3>Audios</h3>
-<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
-<audio controls="controls">
-    <source src="musica_doidona.mp3" type="audio/mp3" />
-
-</audio>
-</div>
+        <a href="defendasuanaveespacial.html"><img style="height:100px" src="" alt="Defenda Sua Nave Espacial" /></a>
+    </div>
 </body>
 </html>
