--- a/html/goc.html
+++ b/html/goc.html
@@ -89,7 +89,7 @@
 <p>
    Indisponivel por agora
 </div>
-<h3>Recursos graficos</h3>
+<h3>Recursos graficos <a href= "../img/img.rar" download="Goc img">Dowload</a></h3>
 <div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
     <img src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862428863359614984/unknown.png" alt="Alternate Text" />
@@ -99,12 +99,13 @@
     <img src="https://cdn.discordapp.com/attachments/852246003155206185/864138443776196648/unknown.png" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/852246003155206185/864193410311520256/espada_1.png" alt="">
 
-
 </div>
-<h3>Audios</h3>
+
+<h3>Audios <a href= "../mp3/audios.rar" download="../mp3/musica_doidona.mp3">Dowload</a></h3>
 <div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
 <audio controls="controls">
-    <source src="../mp3/musica_doidona.mp3" type="audio/mp3" autp />
+
+    <source src="../mp3/musica_doidona.mp3" type="audio/mp3" />
 
 </audio>
 </div>
