--- a/html/caiouser.html
+++ b/html/caiouser.html
@@ -44,12 +44,12 @@
             style="text-align:left;">
         
             Gerente da Pagina: 
-            <a href="html/wesleyuser.html">Wesley Queiroz Alencar</a> <br>
+            <a href="wesleyuser.html">Wesley Queiroz Alencar</a> <br>
             
             Designers: 
-            <a href="html/caiouser.html">Caio Rodrigo Forim</a>, 
-            <a href="html/fabriciouser.html">Fabrício Keltika Tanquella</a> e 
-            <a href="html/ederuser.html">Eder</a>
+            <a href="caiouser.html">Caio Rodrigo Forim</a>, 
+            <a href="fabriciouser.html">Fabrício Keltika Tanquella</a> e 
+            <a href="ederuser.html">Eder</a>
 
     </div>
 
@@ -90,7 +90,7 @@
         border: double; 
         background-color:darkgray; ">
 
-        <img style="height:20%;" src="https://cdn.discordapp.com/attachments/852246003155206185/862848186213204018/Caiocircular.png"align= "left">
+        <img style="height:20%;" src="../img/Caiocircular.png"align= "left">
         <p style="text-align:left;">
             Olá! Sou Caio Rodrigo Forim (ataby himawari). Eu sou artista, compositor e programador. Eu gosto de jogos de história e ação. Eu sei como programar em Construct, GDevelop, Clickteam e Scratch.
         </p>
