--- a/html/goc.html
+++ b/html/goc.html
@@ -15,7 +15,7 @@
     <link href="../css/membros.css" rel="stylesheet" />
     <link href="../css/padrao.css" rel="stylesheet" />
     <link href="../css/artigos.css" rel="stylesheet" />
-    <link rel="shortcut icon" href="../img/Screenshot_2021-06-15-13-37-50-1.ico" />
+    <link rel="shortcut icon" href="../img/simbolo_goc_completo_preto.ico" />
 </head>
 <body style="text-align:center">
         
@@ -96,9 +96,10 @@
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862678460358459392/unknown.png" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680791440293938/grams2.gif" alt="Alternate Text" />
     <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680894615060531/pedra_certa.png" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/852246003155206185/864138443776196648/unknown.png" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/852246003155206185/864193410311520256/espada_1.png" alt="">
-
+    <img src="../img/goc/unknown (2).png" alt="Alternate Text" />
+    <img src="../img/goc/espada_1.png" alt="">
+    <img src="../img/goc/espada_2.png" alt="">
+    <img src="../img/goc/espada_3curta.png" alt="">
 </div>
 
 <h3>Audios <a href= "../mp3/audios.rar" download="../mp3/musica_doidona.mp3">Dowload</a></h3>
