--- a/html/goc.html
+++ b/html/goc.html
@@ -73,7 +73,7 @@
     <br /> <br /> <br />
     
 <h2>Projéto Guardians of Crystal (GOC) </h2>
-<img src="https://cdn.discordapp.com/attachments/854395140433117184/854399928138072064/Screenshot_2021-06-15-13-37-50-1.png" alt="Alternate Text" />
+<img src="../img/simbolo_goc_completo_preto.png" alt="Alternate Text" />
 
 <h3>Membros deste projeto</h3>
 <p style=" align-content: center; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border:double; background-color:darkgray; ">
