--- a/html/projetos.html
+++ b/html/projetos.html
@@ -97,7 +97,7 @@
                 "height:100px" 
             
             src=
-                "https://cdn.discordapp.com/attachments/854395140433117184/854399928138072064/Screenshot_2021-06-15-13-37-50-1.png" 
+                "../img/simbolo_goc_completo_preto.png" 
             
             alt=
                 "GOC" 
