--- a/html/goc.html
+++ b/html/goc.html
@@ -85,9 +85,17 @@
     Roteirista: Milly <br />
 </p>
 <h3>Sobre o projeto</h3>
-<div style=" align-content: center; color: red; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
 <p>
-   Indisponivel por agora
+    Estamos criando um jogo chamado Guardians of Crystal
+</p>
+<h1>Sinopse</h3>
+<p>
+    Um lugar que é dividido entre dois reinos, que sempre existiram sobre a ruina do “bem” e do “mal”: Avaleste e Alazeque.
+    Em Avaleste, uma população pacífica vive sob o poder dos imperadores e sob lendas e lendas cultivadas com o tempo. A classe camponesa é a que mais sofre nesse Reino, e isso se mostra cada vez mais nítido... 
+    Uma guerra explode, o reino de Avaleste e Alazeque entram numa disputa que parece definitiva. Logo, durante a guerra, surge em Avaleste algo inevitável: uma revolução camponesa em busca de vidas melhores... Rebelião essa que é proposta pelos próprios camponeses, de peito aberto, mas liderados por um jovem que se destaca cada vez mais: Daves...
+    Com uma cajadada só, o governo dos imperadores coloca Daves diretamente no exército, assim incorporando um grande soldado, e acabando com a revolução... 
+    Agora, Daves, soldado normal (em companhia de seu companheiro de exército, Steven, um grande arqueiro), precisa evoluir, sem saber de coisas que o levarão diretamente para uma lenda antiga que move as terras sem dono, o único lugar que separa os dois reinos: o Cristal.
 </div>
 <h3>Recursos graficos <a href= "../img/img.rar" download="Goc img">Dowload</a></h3>
 <div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
