--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-	<title>Fall Gwecs Team WEB</title> 
+	<title>Fall Gwecs Team WEB</title>
 	
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -72,7 +72,7 @@
 								<div class="project-item one animated fadeInRight">
 									<img src="img/goc_projeto.png" alt="">
 									<div class="overlay">
-										<h4><a href="#">Guardians Of Crystal</h4>
+										<h4><a href="html/goc.html">Guardians Of Crystal</h4>
 									</div>
 								</div>
 							</div>
@@ -80,7 +80,7 @@
 								<div class="project-item two animated fadeInRight">
 									<img src="img/webhook_projetos.png" alt="">
 									<div class="overlay">
-										<h4><a href="#">Discord Webhook Sender</a></h4>
+										<h4><a href="html/webhook.html">Discord Webhook Sender</a></h4>
 									</div>
 								</div>
 							</div>
@@ -88,7 +88,7 @@
 								<div class="project-item three animated fadeInRight">
 									<img src="img/robnam_projetos.png" alt="">
 									<div class="overlay">
-										<h4><a href="#">ROB-NAM</a></h4>
+										<h4><a href="html/rob-nam.html">ROB-NAM</a></h4>
 									</div>
 								</div>
 							</div>
@@ -96,7 +96,7 @@
 								<div class="project-item four animated fadeInRight">
 									<img src="img/defendasuanaveespacial_projetos.png" alt="">
 									<div class="overlay">
-										<h4><a href="#">Defenda sua nave espacial</a></h4>
+										<h4><a href="html/defendasuanaveespacial.html">Defenda sua nave espacial</a></h4>
 									</div>
 								</div>
 							</div>
@@ -110,7 +110,7 @@
 				<h1>Nossos projetos atuais</h1>
 				<a 
 					href=
-						"goc.html">
+						"html/goc.html">
 						
 
 					<img 
@@ -127,7 +127,7 @@
 				</a>
 				<a 
 				href=
-					"webhook.html">
+					"html/webhook.html">
 					
 
 				<img 
@@ -145,7 +145,7 @@
 
 			<h1>Projetos solos dos integrantes</h1>
 
-			<a  href="rob-nam.html"><img style="height:100px" src="img/robnam_projetos.png" alt="ROB-NAM" /></a>
+			<a  href="html/rob-nam.html"><img style="height:100px" src="img/robnam_projetos.png" alt="ROB-NAM" /></a>
 
 				<a href="html/defendasuanaveespacial.html"><img style="height:100px" src="img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
 		</div>	
