--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 							</div>
 							<div class="col-md-6 col-sm-6">
 								<div class="project-item three animated fadeInRight">
-									<img src="img/robnam_projetos.png" alt="">
+									<img src="img/thumb_-_Copia.png" alt="">
 									<div class="overlay">
-										<h4><a href="html/rob-nam.html">ROB-NAM</a></h4>
+										<h4><a href="html/rob-nam2.html">ROB-NAM Odyssey</a></h4>
 									</div>
 								</div>
 							</div>
@@ -148,6 +148,8 @@
 			<a  href="html/rob-nam.html"><img style="height:100px" src="img/robnam_projetos.png" alt="ROB-NAM" /></a>
 
 				<a href="html/defendasuanaveespacial.html"><img style="height:100px" src="img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
+
+				<a  href="html/rob-nam2.html"><img style="height:100px" src="img/thumb_-_Copia.png" alt="ROB-NAM Odyssey" /></a>
 		</div>	
 	</div>
 
