--- a/html/caiouser.html
+++ b/html/caiouser.html
@@ -62,14 +62,10 @@ ataby_himawari</a>
     <h3>Jogos:</h3>
     <BR />
     <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
-        <a href="rob-nam.html"><img style="height:100px" src="https://cdn.discordapp.com/attachments/852245358544289795/863045385476243496/unknown.png" alt="Alternate Text" /></a>
+        <a href="rob-nam.html"><img style="height:100px" src="../img/robnam_projetos.png" alt="Alternate Text" /></a>
+        <a href="rob-nam2.html"><img style="height:100px" src="../img/thumb_-_Copia.png" alt="Alternate Text" /></a>
     </div>
 
-    <span class="border-top"></span>
-	<span class="border-left"></span>
-	<span class="border-right"></span>
-	<span class="border-bottom"></span>
-	<span class="shape-1"></span>
-	<span class="shape-2"></span>
+
 </body>
 </html>
