--- a/html/wesleyuser.html
+++ b/html/wesleyuser.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/animate.css">
     <link rel="stylesheet" href="../css/templatemo_style.css">
     <link rel="stylesheet" href="../css/colors.css">
-    <link rel="shortcut icon" href="../img/simbolo_goc_completo_preto.ico" />
+    <link rel="shortcut icon" href="../img/Fall_Gwecs_simbolo_COMPLETO_BRANCO.ico " />
     
 </head>
 <body style="text-align:center">
@@ -47,7 +47,7 @@
             style=
                 "text-align:left;">
             
-            [Erro!]
+            [Por enquanto nada a dizer!]
         </p>
     </div>
 
@@ -73,7 +73,7 @@
     <h3>Jogos:</h3>
     <BR />
     <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
-        <a href="defendasuanaveespacial.html"><img style="height:100px" src="" alt="Defenda Sua Nave Espacial" /></a>
+        <a href="defendasuanaveespacial.html"><img style="height:100px" src="../img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
     </div>
 </body>
 </html>
