--- a/index.html
+++ b/index.html
@@ -171,8 +171,14 @@
 	
 				<a href="html/ederuser.html">
 					<img style="height:20%;" src="img/eucircular.png" alt="Alternate Text" /></a>
-					<a href="html/mily.html">
-						<img style="height:20%;" src="img/milycircular.png" alt="Alternate Text" /></a>
+				<a href="html/mily.html">
+					<img style="height:20%;" src="img/milycircular.png" alt="Alternate Text" /></a>
+
+				<a href="html/guilherme.html">
+					<img style="height:20%;" src="img/Guilherme_1.png" alt="Alternate Text" /></a>
+
+					<a href="html/ludis.html">
+						<img style="height:20%;" src="img/Ludiscircular.png" alt="Alternate Text" /></a>
 		</div>
 
 
