--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
 				<a href="html/defendasuanaveespacial.html"><img style="height:100px" src="img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
 
 				<a  href="html/rob-nam2.html"><img style="height:100px" src="img/thumb_-_Copia.png" alt="ROB-NAM Odyssey" /></a>
+
+				<a href="aluradefendercaio.html"><img style="height:100px" src="../img/thumb_-_Copia (1).png" alt="Alternate Text" /></a>
 		</div>	
 	</div>
 
