--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 				<a  href="html/rob-nam2.html"><img style="height:100px" src="img/thumb_-_Copia.png" alt="ROB-NAM Odyssey" /></a>
 
-				<a href="aluradefendercaio.html"><img style="height:100px" src="img/thumb_-_Copia (1).png" alt="Alternate Text" /></a>
+				<a href="html/aluradefendercaio.html"><img style="height:100px" src="img/thumb_-_Copia (1).png" alt="Alternate Text" /></a>
 		</div>	
 	</div>
 
