--- a/html/goc.html
+++ b/html/goc.html
@@ -30,18 +30,18 @@
 <h3>Membros deste projeto</h3>
 <p style=" align-content: center; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border:double; background-color:darkgray; ">
     Organizador: <a href="fabriciouser.html">Fabricio</a> <br />
-    gráficos: Eder , <a href="fabriciouser.html">Fabricio</a>, Guilherme, <a href="caiouser.html">Caio</a>, Ludis <br />
+    gráficos: <a href="ederuser.html">Eder</a> , <a href="fabriciouser.html">Fabricio</a>, <a href="guilherme.html">Guilherme</a>, <a href="caiouser.html">Caio</a>,<a href="ludis.html">Ludis</a> <br />
     Áudio: <a href="fabriciouser.html">Fabricio</a> e <a href="caiouser.html">Caio</a> <br />
-    Cutcienes / história André e  Eder <br />
-    Apoio geral: André, Laura, Milly e <a href="wesleyuser.html">Wesley</a> <br />
-    Roteirista: Milly <br />
+    Cutcienes / história André e <a href="ederuser.html">Eder</a> <br />
+    Apoio geral: André, <a href="laura.html">Laura</a>, <a href="mily.html">Mily</a>, Thai e <a href="wesleyuser.html">Wesley</a> <br />
+    Roteirista: <a href="mily.html">Mily</a><br />
 </p>
 <h3>Sobre o projeto</h3>
-<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: dashed; background-color:darkgray; ">
+<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
 <p>
     Estamos criando um jogo chamado Guardians of Crystal
 </p>
-<h1>Sinopse</h3>
+<h1>Sinopse do jogo</h3>
 <p>
     Um lugar que é dividido entre dois reinos, que sempre existiram sobre a ruina do “bem” e do “mal”: Avaleste e Alazeque.
     Em Avaleste, uma população pacífica vive sob o poder dos imperadores e sob lendas e lendas cultivadas com o tempo. A classe camponesa é a que mais sofre nesse Reino, e isso se mostra cada vez mais nítido... 
