--- a/html/ederuser.html
+++ b/html/ederuser.html
@@ -47,7 +47,7 @@
         style=
             "text-align:left;">
 
-        [Erro!]
+            Olá, meu nome é Eder José Schon e tenho 13 anos, sou artista, programador, escritor, matemático, entre mil outras coisas. Sou muito bom em arte realista, mas consigo fazer coisas legais com pixel art. Gosto muito de ler e de criar histórias de fantasia (principalmente medieval), e por isso criei boa parte da história de GOC e estou criando um livro nesse estilo. No momento, estou trabalhando no projeto do GOC, e em conjunto com os outros artistas da equipe, estou criando os recursos gráficos do game e ajudando, raramente, na programação.
         </p>
 </div>
     <br /><br /><br />
