--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 				<a href="html/aluradefendercaio.html"><img style="height:100px" src="img/thumb_-_Copia (1).png" alt="Alternate Text" /></a>
 				
 				<a href="html/mk3ultimatebeta.html"><img style="height:100px" src="img/Project_Capture.jpg" alt="MK3 ULTIMATE BETA" /></a>
+
+				<a href="html/soccerteam.html"><img style="height:100px" src="img/" alt="Soccer Team" /></a>
 		</div>	
 	</div>
 
