--- a/html/ederuser.html
+++ b/html/ederuser.html
@@ -61,7 +61,7 @@
         background-position: center; 
         padding: 5px; margin: 50px 100px; 
         border: inset; ">
-        <p style="text-align:center;">Nehum jogo cadastrado até o momento</p>
+        <p ><a href="soccerteam.html"><img style="height:100px" src="../img/" alt="Soccer Team" /></a></p>
     </div>
 </body>
 </html>
