--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 				
 				<a href="html/mk3ultimatebeta.html"><img style="height:100px" src="img/Project_Capture.jpg" alt="MK3 ULTIMATE BETA" /></a>
 
-				<a href="html/soccerteam.html"><img style="height:100px" src="img/" alt="Soccer Team" /></a>
+				<a href="html/soccerteam.html"><img style="height:100px" src="img/img_Soccer_Game.png" alt="Soccer Team" /></a>
 		</div>	
 	</div>
 
