--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<link rel="stylesheet" href="css/templatemo_style.css">
 	<link rel="stylesheet" href="css/colors.css">
 	
+	<meta name="author" content="Fall gwecs team">
+	<meta name="description" content="A pagina oficial da Fall GwecsTeam. Esta pagina foi feita por alunos da turma edutech 12400133, aqui você vai encontrar varios projetos legais da nossa equipe.">
+	<meta name="keywords" content="Fall-Gwecs-Team">
+	<meta name="title" content="Fall Gwecs Team">
 
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
