--- a/html/webhook.html
+++ b/html/webhook.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Discord Webhook Sender</title>
-  <meta name="author" content="Zua">
+  <meta name="author" content="Fall gwecs team">
   <meta name="description" content="Simple Discord Webhook Sender">
   <meta name="keywords" content="discord,zua,webhook">
   <meta name="title" content="Discord Webhook Sender">
