--- a/html/wesleyuser.html
+++ b/html/wesleyuser.html
@@ -47,7 +47,7 @@
             style=
                 "text-align:left;">
             
-            [Por enquanto nada a dizer!]
+            Sou Wesley Queiroz Alencar [Por enquanto nada a dizer!]
         </p>
     </div>
 
@@ -56,7 +56,7 @@
 
     <img 
         style="height: 50px;" 
-        src="https://img.icons8.com/plasticine/2x/discord-new-logo.png" align= "left"> <p">ProcrackYT#4444</p> 
+        src="https://img.icons8.com/plasticine/2x/discord-new-logo.png" align= "left"> <p">ProcrackWesley#1111</p> 
         
         <br>
 
