--- a/html/wesleyuser.html
+++ b/html/wesleyuser.html
@@ -47,7 +47,7 @@
             style=
                 "text-align:left;">
             
-            Sou Wesley Queiroz Alencar [Por enquanto nada a dizer!]
+Olá pessoal!  Sou Wesley Queiroz Alencar, aluno do programa Edutech (Obrigado professora Roseli Oliveira Aleixo Da Silva e aos professores do Alura por estar nos guiando nesta jornada de programador, também sou o fundador desta página web. Tenho 14 anos e estou terminando o ensino fundamental no Colégio Estadual Professor Elysio Vianna que fica em Curitiba (Capital do Paraná). Sou programador porem não tenho uma linguajem de programação especifica para trabalhar, sei usar um pouquinho de Python, Java e Java Script. Gosto bastante de linguagens de desenvolvimento web tanto é que fiz está página usando HTML, CSS e JS junto com os demais alunos que me ajudaram bastante com o design dá página (Graças a Eder a página tem vários ícones legais, e a Fabricio e Caio que escolheram o tema dá página).
         </p>
     </div>
 
