--- a/html/wesleyuser.html
+++ b/html/wesleyuser.html
@@ -1,4 +1,4 @@
-﻿<html lang="pt-br">
+<html lang="pt-br">
 <head>
     <meta charset="utf-8" name="viewport" content="" />
     <title>Wesley</title>
@@ -75,5 +75,21 @@ Olá pessoal!  Sou Wesley Queiroz Alencar, aluno do programa Edutech (Obrigado p
     <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
         <a href="defendasuanaveespacial.html"><img style="height:100px" src="../img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
     </div>
+
+<div id="chat_wesleyuser"></div>
+<script type="text/javascript">
+    var chatovodOnLoad = chatovodOnLoad || [];
+    chatovodOnLoad.push(function() {
+        chatovod.addChatToDivId("chat_wesleyuser", {host: "wesleyuser.chatovod.com",
+            width: "100%", height: 380, defaultLanguage: "en"});
+    });
+    (function() {
+        var po = document.createElement('script');
+        po.type = 'text/javascript'; po.charset = "UTF-8"; po.async = true;
+        po.src = 'https://st1.chatovod.com/api/js/v1.js?3';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(po, s);
+    })();
+</script>
 </body>
 </html>
