--- a/html/wesleyuser.html
+++ b/html/wesleyuser.html
@@ -1,4 +1,4 @@
-<html lang="pt-br">
+﻿<html lang="pt-br">
 <head>
     <meta charset="utf-8" name="viewport" content="" />
     <title>Wesley</title>
@@ -76,12 +76,12 @@ Olá pessoal!  Sou Wesley Queiroz Alencar, aluno do programa Edutech (Obrigado p
         <a href="defendasuanaveespacial.html"><img style="height:100px" src="../img/defendasuanaveespacial_projetos.png" alt="Defenda Sua Nave Espacial" /></a>
     </div>
 
-<div id="chat_wesleyuser"></div>
+<div id="chat_wesleyuser" style='colors: ' ></div>
 <script type="text/javascript">
     var chatovodOnLoad = chatovodOnLoad || [];
     chatovodOnLoad.push(function() {
         chatovod.addChatToDivId("chat_wesleyuser", {host: "wesleyuser.chatovod.com",
-            width: "100%", height: 380, defaultLanguage: "en"});
+            width: "85%", height: 380, defaultLanguage: "en"});
     });
     (function() {
         var po = document.createElement('script');
