--- a/html/fabriciouser.html
+++ b/html/fabriciouser.html
@@ -1,4 +1,4 @@
-
+﻿
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" name="viewport" content="" />
@@ -73,5 +73,21 @@
     <div style=" text-align:left; color: black; font-weight: bold; background-position: center; padding: 5px; margin: 50px 100px; border: inset; ">
         <a href="mk3ultimatebeta.html"><img style="height:100px" src="../img/Project_Capture.jpg" alt="MK3 ULTIMATE BETA" /></a>
     </div>
+
+    <div id="chat_fabriciouser" style='colors: ' ></div>
+    <script type="text/javascript">
+        var chatovodOnLoad = chatovodOnLoad || [];
+        chatovodOnLoad.push(function() {
+            chatovod.addChatToDivId("chat_fabriciouser", {host: "fabriciouser.chatovod.com",
+                width: "85%", height: 380, defaultLanguage: "en"});
+        });
+        (function() {
+            var po = document.createElement('script');
+            po.type = 'text/javascript'; po.charset = "UTF-8"; po.async = true;
+            po.src = 'https://st1.chatovod.com/api/js/v1.js?3';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(po, s);
+        })();
+    </script>
 </body>
 </html>
