--- a/html/ederuser.html
+++ b/html/ederuser.html
@@ -1,4 +1,4 @@
-<html lang="pt-br">
+﻿<html lang="pt-br">
     <head>
         <meta charset="utf-8" name="viewport" content="" />
         <title>Eder</title>
@@ -63,5 +63,22 @@
         border: inset; ">
         <p ><a href="soccerteam.html"><img style="height:100px" src="../img/img_Soccer_Game.png" alt="Soccer Team" /></a></p>
     </div>
+
+
+    <div id="chat_ederuser" style='colors: ' ></div>
+    <script type="text/javascript">
+        var chatovodOnLoad = chatovodOnLoad || [];
+        chatovodOnLoad.push(function() {
+            chatovod.addChatToDivId("chat_ederuser", {host: "ederuser.chatovod.com",
+                width: "85%", height: 380, defaultLanguage: "en"});
+        });
+        (function() {
+            var po = document.createElement('script');
+            po.type = 'text/javascript'; po.charset = "UTF-8"; po.async = true;
+            po.src = 'https://st1.chatovod.com/api/js/v1.js?3';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(po, s);
+        })();
+    </script>
 </body>
 </html>
