--- a/html/goc.html
+++ b/html/goc.html
@@ -1,4 +1,4 @@
-
+﻿
 <html lang="pt-br">
 <head>
     <meta charset="utf-8" name="viewport" content="" />
@@ -24,7 +24,7 @@
 				</div>
     </header>
     
-<h2>Projéto Guardians of Crystal (GOC) </h2>
+<h2>Projeto Guardians of Crystal (GOC) </h2>
 <img src="../img/simbolo_goc_completo_preto.png" alt="Alternate Text" />
 
 <h3>Membros deste projeto</h3>
