--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<li><i class="icon-trophy"></i></li>
 					</button>
 
-					<button style="background: none; border: none;" class="btnPlayAudio btn btn-success" data-audiourl="">
+					<button style="background: none; border: none;" class="btnPlayAudio btn btn-success"  >
 						<li><i class="icon-badge"></i></li>
 					</button>
 
@@ -84,8 +84,8 @@
 						<li><i class="icon-magic-wand"></i></li>
 					</button>
 
-					<button style="background: none; border: none;" class="btnPlayAudio btn btn-success" data-audiourl="">
-						<li><i class="icon-screen-desktop"></i></li>
+					<button style="background: none; border: none;" class="btnPlayAudio btn btn-success"> 
+						<li><a href="html/sdwas.html"><i class="icon-screen-desktop"></i></a></li>
 					</button>
 					
 					
