--- a/html/goc.html
+++ b/html/goc.html
@@ -49,27 +49,46 @@
     Com uma cajadada só, o governo dos imperadores coloca Daves diretamente no exército, assim incorporando um grande soldado, e acabando com a revolução... 
     Agora, Daves, soldado normal (em companhia de seu companheiro de exército, Steven, um grande arqueiro), precisa evoluir, sem saber de coisas que o levarão diretamente para uma lenda antiga que move as terras sem dono, o único lugar que separa os dois reinos: o Cristal.
 </div>
-<h3>Recursos graficos <a href= "../img/img.rar" download="Goc img">Dowload</a></h3>
-<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
-    <img src="https://media.discordapp.net/attachments/854395140433117184/856296663131357214/New_Piskel_2.gif?width=144&height=144" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862428863359614984/unknown.png" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862678460358459392/unknown.png" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680791440293938/grams2.gif" alt="Alternate Text" />
-    <img src="https://cdn.discordapp.com/attachments/862280599229825024/862680894615060531/pedra_certa.png" alt="Alternate Text" />
-    <img src="../img/goc/unknown (2).png" alt="Alternate Text" />
-    <img src="../img/goc/espada_1.png" alt="">
-    <img src="../img/goc/espada_2.png" alt="">
-    <img src="../img/goc/espada_3curta.png" alt="">
-</div>
+<h3>Recursos graficos feitos por <a href="caiouser.html">Caio</a> e <a href="ederuser.html">Eder</a><br><a href= "../img/img.rar" download="Goc img" class="blue">Dowload</a></h3>
 
-<h3>Audios <a href= "../mp3/audios.rar" download="../mp3/musica_doidona.mp3">Dowload</a></h3>
-<div style=" align-content: center; color: black; font-weight: bold;background-position: center; padding: 5px; margin: 50px 100px; border: double; background-color:darkgray; ">
+   
+    <h4>Recursos naturais </h4>
+    <img src="../img/goc/graveto.png" alt="Alternate Text" style="background-color:blue;" />
+    <img src="../img/goc/pedra_certa.png" alt="Alternate Text" style="background-color:blue;"/>
+    <br>
+    <h4>Objetos que fazem parte da tela do jogador</h4>
+    <img src="../img/goc/mochila_prototico.png" alt="Alternate Text" style="background-color:blueviolet;" />
+    <img src="../img/goc/moeda_projeto.png" alt="Alternate Text" style="background-color:blueviolet;"/>
+    <br>
+    <h4>Armamentos</h4>
+    <img src="../img/goc/espada_1.png" alt="" style="background-color:red;">
+    <img src="../img/goc/katana.png" alt="" style="background-color:red;">
+    <br>
+    <img src="../img/goc/espada_3curta.png" alt="" style="background-color:red;">
+    <img src="../img/goc/espada_4_2.png" alt="" style="background-color:red;">
+
+
+<h3>Audios feito pelo <a href="fabriciouser.html">Fabricio</a><br><a href= "../mp3/audios.rar" download="../mp3/musica_doidona.mp3" class="blue">Dowload</a></h3>
+
 <audio controls="controls">
 
-    <source src="../mp3/musica_doidona.mp3" type="audio/mp3" />
-
+    <source src="../mp3/musica_doidona.mp3" type="audio/mp3" /> 
+</audio> 
+<br>
+<audio controls="controls">
+    <source src="../mp3/01.mp3" type="audio/mp3" /> 
 </audio>
-</div>
+<br>
+<audio controls="controls">
+    <source src="../mp3/musica_do_boss.mp3" type="audio/mp3" /> 
+</audio>
+<br>
+<audio controls="controls">
+    <source src="../mp3/tela_inicial.mp3" type="audio/mp3" /> <br>
+</audio>
+
+
+
 <br/>
 
 </body>
